# Gardener

./: note.md
Gardener/: .gitignore  BUILD.bazel  MODULE.bazel  Makefile  WORKSPACE.bzlmod  build.gradle.kts  note.md  settings.gradle.kts
Gardener/frontend/: BUILD.bazel
Gardener/frontend_old/: BUILD.bazel
Gardener/src/java/config/: AppModule.java
Gardener/src/java/myapp/: App.java  BUILD.bazel  HelloResource.java  Main.java  MessageService.java  MyApplication.java  MyGuiceModule.java  MyService.java
Gardener/src/java/myapp/com/example/: App.java  FrontEndResource.java  GuiceConfig.java  HelloHealthCheck.java  MyConfig.java  MyModule.java  MyResource.java  MyService.java  MyServiceImpl.java  TestDW.java
Gardener/src/java/myapp/com/example/guice/: GuiceConfig.java
Gardener/src/java/service/: GreetingService.java
Gardener/src/main/java/app/: GardenerApp.java  MainApp.java
Gardener/src/main/java/com/example/demo/: DemoApplication.java
Gardener/src/main/java/com/example/mybackend/: MyApp.java  MyAppConfig.java
Gardener/src/main/java/com/example/mybackend/modules/: MyGuiceModule.java
Gardener/src/main/java/com/example/mybackend/resources/: HelloResource.java
Gardener/src/main/java/com/main/app/: GardenderApplication.java
Gardener/src/main/java/com/main/controller/: GreetingController.java
Gardener/src/main/java/com/main/guice/: AppModule.java
Gardener/src/main/java/com/main/service/: GreetingService.java  GreetingServiceImpl.java
Gardener/src/main/java/config/: SwaggerApp.java
Gardener/src/main/java/resources/: GreetingResource.java  SwaggerRedirectServlet.java
Gardener/src/main/java/service/: GreetingServiceImpl.java
Gardener/src/main/resources/: GreetingResource.java  HelloResource.java
Gardener/src/main/resources/swagger-ui/: index.html
Gardener/src/test/java/com/example/demo/: DemoApplicationTest.java
Gardener/src/test/java/com/main/app/: GardenderApplicationTest.java
