module(
    name = "gardener",
    version = "0.1.0",
)

bazel_dep(name = "rules_java", version = "8.11.0")
bazel_dep(name = "rules_jvm_external", version = "6.3")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

maven.artifact(
    name = "jersey_grizzly",
    group = "org.glassfish.jersey.containers",
    artifact = "jersey-container-grizzly2-http",
    version = "3.1.3",
)

maven.artifact(
    name = "jersey_server",
    group = "org.glassfish.jersey.core",
    artifact = "jersey-server",
    version = "3.1.3",
)

maven.artifact(
    name = "jersey_common",
    group = "org.glassfish.jersey.core",
    artifact = "jersey-common",
    version = "3.1.3",
)

maven.artifact(
    name = "jersey_hk2",
    group = "org.glassfish.jersey.inject",
    artifact = "jersey-hk2",
    version = "3.1.3",
)

maven.artifact(
    name = "hk2_guice_bridge",
    group = "org.glassfish.hk2",
    artifact = "guice-bridge",
    version = "2.6.1",
)

maven.artifact(
    name = "guice",
    group = "com.google.inject",
    artifact = "guice",
    version = "7.0.0",
)

use_repo(maven,
    "jersey_grizzly",
    "jersey_server",
    "jersey_common",
    "jersey_hk2",
    "hk2_guice_bridge",
    "guice"
)
