module(
    name = "gardener",
    version = "0.1.0",
)

bazel_dep(name = "rules_java", version = "8.11.0")
bazel_dep(name = "rules_jvm_external", version = "6.3")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.artifact(
    name = "dropwizard_core",
    artifact = "dropwizard-core",
    group = "io.dropwizard",
    version = "2.1.0",
)
maven.artifact(
    name = "jakarta_ws_rs_api",
    artifact = "jakarta.ws.rs-api",
    group = "jakarta.ws.rs",
    version = "2.1",
)
maven.artifact(
    name = "guice",
    artifact = "guice",
    group = "com.google.inject",
    version = "7.0.0",
)
maven.artifact(
    name = "jaxrs_api",
    group = "jakarta.ws.rs",
    artifact = "jakarta.ws.rs-api",
    version = "2.1.6",
)

maven.artifact(
    name = "javax_ws_rs_api",
    group = "javax.ws.rs",
    artifact = "javax.ws.rs-api",
    version = "2.1",
)
maven.artifact(
    name = "javax_inject",
    group = "javax.inject",
    artifact = "javax.inject",
    version = "1",
)
use_repo(maven, "javax_inject")
use_repo(maven, "dropwizard_core", "guice", "jakarta_ws_rs_api","jaxrs_api","javax_ws_rs_api")
