module(
    name = "gardener",
    version = "0.1.0",
)

bazel_dep(name = "rules_java", version = "8.11.0")
bazel_dep(name = "rules_jvm_external", version = "6.3")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.artifact(
    name = "dropwizard_core",
    artifact = "dropwizard-core",
    group = "io.dropwizard",
    version = "2.1.0",
)
maven.artifact(
    name = "jakarta_ws_rs_api",
    artifact = "jakarta.ws.rs-api",
    group = "jakarta.ws.rs",
    version = "2.1",
)
maven.artifact(
    name = "guice",
    artifact = "guice",
    group = "com.google.inject",
    version = "7.0.0",
)
maven.artifact(
    name = "jaxrs_api",
    artifact = "jakarta.ws.rs-api",
    group = "jakarta.ws.rs",
    version = "2.1.6",
)
maven.artifact(
    name = "javax_ws_rs_api",
    artifact = "javax.ws.rs-api",
    group = "javax.ws.rs",
    version = "2.1",
)
maven.artifact(
    name = "javax_inject",
    artifact = "javax.inject",
    group = "javax.inject",
    version = "1",
)
use_repo(maven, "javax_inject")
use_repo(maven, "dropwizard_core", "guice", "jakarta_ws_rs_api", "javax_ws_rs_api", "jaxrs_api")

## Aspect-Build/Rules_JS ##
# https://github.com/aspect-build/rules_js/releases/tag/v2.3.7
bazel_dep(name = "aspect_rules_js", version = "2.3.7")

####### Node.js version #########
# By default you get the node version from DEFAULT_NODE_VERSION in @rules_nodejs//nodejs:repositories.bzl
# Optionally you can pin a different node version:
# bazel_dep(name = "rules_nodejs", version = "6.3.0")

# node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node", dev_dependency = True)
# node.toolchain(node_version = "16.14.2")
#################################

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)

npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)

npm_translate_lock_ext = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm_translate_lock")
npm_translate_lock_ext.npm_translate_lock(
    name = "npm",
    package_json = "//frontend:package.json",
    lock_file = "//frontend:package-lock.json",
)
use_repo(npm, "npm")

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")

# Allows developers to use the matching pnpm version, for example:
# bazel run -- @pnpm --dir /home/runner/work/rules_js/rules_js install
use_repo(pnpm, "pnpm")
