java_binary(
    name = "server",
    srcs = glob(["*.java"]),
    main_class = "myapp.App",
    deps = [
        "@jersey_grizzly//:org_glassfish_jersey_containers_jersey_container_grizzly2_http",
        "@jersey_grizzly//:jakarta_ws_rs_jakarta_ws_rs_api",
        "@jersey_grizzly//:jakarta_inject_jakarta_inject_api",
        "@jersey_grizzly//:org_glassfish_grizzly_grizzly_http_server",
        "@jersey_server//:org_glassfish_jersey_core_jersey_server",
        "@jersey_common//:org_glassfish_jersey_core_jersey_common",
        "@jersey_hk2//:org_glassfish_jersey_inject_jersey_hk2",
        "@jersey_hk2//:org_glassfish_hk2_hk2_api",
        "@hk2_guice_bridge//:org_glassfish_hk2_guice_bridge",
        "@guice//:com_google_inject_guice",
    ],

    visibility = ["//visibility:public"],
)
